// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/Bucket/Toolbar Add should render children when popover is opened 1`] = `
<div>
  <div
    class="makeStyles-root-9"
  >
    <button
      role="button"
    >
      Add files
    </button>
    <div
      aria-hidden="true"
      class="MuiBackdrop-root makeStyles-backdrop-11"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      class="MuiPaper-root makeStyles-popup-10 MuiPaper-elevation4 MuiPaper-rounded"
    >
      Hello, Popover!
    </div>
  </div>
</div>
`;

exports[`containers/Bucket/Toolbar Add should render with custom label 1`] = `
<div>
  <div
    class="makeStyles-root-5"
  >
    <button
      role="button"
    >
      Custom Add Label
    </button>
    <div
      aria-hidden="true"
      class="MuiBackdrop-root makeStyles-backdrop-7"
      style="opacity: 0; visibility: hidden;"
    />
  </div>
</div>
`;

exports[`containers/Bucket/Toolbar Add should render with default label 1`] = `
<div>
  <div
    class="makeStyles-root-1"
  >
    <button
      class="custom-class"
      role="button"
    >
      Add files
    </button>
    <div
      aria-hidden="true"
      class="MuiBackdrop-root makeStyles-backdrop-3"
      style="opacity: 0; visibility: hidden;"
    />
  </div>
</div>
`;

exports[`containers/Bucket/Toolbar CreatePackage should render children when popover is opened 1`] = `
<div>
  <div
    class="makeStyles-root-31"
  >
    <button
      class="makeStyles-root-30"
      role="button"
    >
      Create package
    </button>
    <div
      aria-hidden="true"
      class="MuiBackdrop-root makeStyles-backdrop-33"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      class="MuiPaper-root makeStyles-popup-32 MuiPaper-elevation4 MuiPaper-rounded"
    >
      Hello, Popover!
    </div>
  </div>
</div>
`;

exports[`containers/Bucket/Toolbar CreatePackage should render with empty selection 1`] = `
<div>
  <div
    class="makeStyles-root-26"
  >
    <button
      class="makeStyles-root-25 custom-class"
      role="button"
    >
      Create package
    </button>
    <div
      aria-hidden="true"
      class="MuiBackdrop-root makeStyles-backdrop-28"
      style="opacity: 0; visibility: hidden;"
    />
  </div>
</div>
`;

exports[`containers/Bucket/Toolbar Get should render children when popover is opened 1`] = `
<div>
  <div
    class="makeStyles-root-21"
  >
    <button
      role="button"
    >
      Get files
    </button>
    <div
      aria-hidden="true"
      class="MuiBackdrop-root makeStyles-backdrop-23"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      class="MuiPaper-root makeStyles-popup-22 MuiPaper-elevation4 MuiPaper-rounded"
    >
      Hello, Popover!
    </div>
  </div>
</div>
`;

exports[`containers/Bucket/Toolbar Get should render with custom label 1`] = `
<div>
  <div
    class="makeStyles-root-17"
  >
    <button
      role="button"
    >
      Custom Get Label
    </button>
    <div
      aria-hidden="true"
      class="MuiBackdrop-root makeStyles-backdrop-19"
      style="opacity: 0; visibility: hidden;"
    />
  </div>
</div>
`;

exports[`containers/Bucket/Toolbar Get should render with default label 1`] = `
<div>
  <div
    class="makeStyles-root-13"
  >
    <button
      class="custom-class"
      role="button"
    >
      Get files
    </button>
    <div
      aria-hidden="true"
      class="MuiBackdrop-root makeStyles-backdrop-15"
      style="opacity: 0; visibility: hidden;"
    />
  </div>
</div>
`;

exports[`containers/Bucket/Toolbar Organize should render children when popover is opened 1`] = `
<div>
  <span
    class="MuiBadge-root"
  >
    <div
      class="makeStyles-root-41"
    >
      <button
        role="button"
      >
        Organize
      </button>
      <div
        aria-hidden="true"
        class="MuiBackdrop-root makeStyles-backdrop-43"
        style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      />
      <div
        class="MuiPaper-root makeStyles-popup-42 MuiPaper-elevation4 MuiPaper-rounded"
      >
        Hello, Popover!
      </div>
    </div>
    <span
      class="MuiBadge-badge makeStyles-badge-40 MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorPrimary"
    >
      5
    </span>
  </span>
</div>
`;

exports[`containers/Bucket/Toolbar Organize should render with selection items 1`] = `
<div>
  <span
    class="MuiBadge-root"
  >
    <div
      class="makeStyles-root-36"
    >
      <button
        class="custom-class"
        role="button"
      >
        Organize
      </button>
      <div
        aria-hidden="true"
        class="MuiBackdrop-root makeStyles-backdrop-38"
        style="opacity: 0; visibility: hidden;"
      />
    </div>
    <span
      class="MuiBadge-badge makeStyles-badge-35 MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorPrimary"
    >
      5
    </span>
  </span>
</div>
`;
